# ColabTurtlePlus

./: Documentation.md  LICENSE  README.md  setup.cfg  setup.py
ColabTurtle/: Turtle.py
ColabTurtlePlus/: Turtle.py  __init__.py
Examples/: IFSTurtleGraphics.ipynb
Lab_examples/: IFSTurtleGraphics.ipynb
examples/: IFSTurtleGraphics  IFSTurtleGraphics.ipynb  IFSTurtleGraphics.md  SierpinskiTriangle.md  TolgaAtamExample.md  TurtleStar.md  bytedesign.md  chaos.md  simplePlot.md  tdemo_peace.md  testing.md  yinyang.md
examples-Lsystems/: descriptions
examples-Lsystems/files/: Heighway_tiling.ipynb  Koch_snowflake_with_Sier_Triangle.ipynb  Levy_inside.ipynb  Levy_outside.ipynb  Mcworter_2nd_form.ipynb  gosper_curve.ipynb  pentadentrite_2nd_form.ipynb
examples-Lsystems/files/examples_version2/files/: gosper_curve.ipynb
examples/files/: IFSTurtleGraphics.ipynb  SimplePlot.ipynb  TolgaAtamExample.ipynb  TurtleStar.ipynb  bytedesign.ipynb  bytedesign_color.ipynb  chaos.ipynb  fill_example.ipynb  tdemo_peace.ipynb  yinyang.ipynb
examples_Lsystems/files/: gosper_curve.ipynb
examples_version2/: Phyllotaxis.md  RainbowBenzene.md  SierpinskiTriangle.md  TolgaAtamExample.md  TurtleStar.md  bytedesign.md  chaos.md  rainbowbenzene.md  simplePlot.md  tdemo_peace.md  turtle_race.md  yinyang.md
examples_version2/files/: IFSTurtleGraphics.ipynb  Phyllotaxis.ipynb  RainbowBenzene.ipynb  SimplePlot.ipynb  TolgaAtamExample.ipynb  TolgaAtamExample_class.ipynb  TurtleStar.ipynb  TurtleStar_class.ipynb  bytedesign.ipynb  bytedesign_class.ipynb  bytedesign_color.ipynb  chaos.ipynb  tdemo_peace.ipynb  turtle_race.ipynb  yinyang.ipynb  yinyang_class.ipynb
notebooks/: IFSTurtleGraphics.ipynb
