[metadata]
# replace with your username:
name = ColabTurtlePlus-mathriddle
version = 0.0.1
author = Larry Riddle
author_email = lriddle@agnesscott.edu
description = An extension of the original ColabTurtle by Tolga Atam (tolgaatam) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathriddle/ColabTurtlePlus
project_urls =
    Bug Tracker = https://github.com/mathriddle/ColabTurtlePlus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Web Environment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
