[metadata]
name = ColabTurtlePlus
version = 1.2.1
author = Larry Riddle
author_email = lriddle@agnesscott.edu
description = 'An HTML based Turtle implementation for Google Colab and Jupyter Labs'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathriddle/ColabTurtlePlus
project_urls =
    Bug Tracker = https://github.com/mathriddle/ColabTurtlePlus/issues
    Examples = https://github.com/mathriddle/ColabTurtlePlus/tree/main/examples
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ColabTurtlePlus
packages = find:
python_requires = >=3.0

[options.packages.find]
where = ColabTurtlePlus
