[metadata]
name = ColabTurtlePlus
version = 1.5
author = Larry Riddle
author_email = lriddle@agnesscott.edu
description = 'An HTML based Turtle implementation for Google Colab and Jupyter Labs'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathriddle/ColabTurtlePlus
project_urls =
    Bug Tracker = https://github.com/mathriddle/ColabTurtlePlus/issues
    Examples = https://github.com/mathriddle/ColabTurtlePlus/tree/main/examples
    Documentation = https://larryriddle.agnesscott.org/ColabTurtlePlus/documentation.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
